[package]
name = "rusty_pbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
nalgebra-glm = "0.17.0"
pixels = "0.9.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
winit = "0.27.3"
winit_input_helper = "0.13.0"
