[package]
name = "rusty_pbr"
version = "0.1.0"
edition = "2021"

[features]
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
nalgebra-glm = "0.17.0"
pixels = { git = "https://github.com/parasyte/pixels" }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
winit = "0.26"
winit_input_helper = "0.12.0"
imgui = {version = "0.8.2", features = ["tables-api"]}
imgui-winit-support = {version = "0.8.2", features = ["winit-26"]}
imgui-wgpu = "0.20"
